--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,7 +43,8 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Save to <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
-							<li><a href="#" class="noop" id="save_button" title="<kbd><kbd>Ctrl</kbd>+<kbd>S</kbd></kbd>" data-toggle="tooltip">LilyBin</a></li>
+							<!-- Disable saving to LilyBin for now. -->
+							<!-- <li><a href="#" class="noop" id="save_button" title="<kbd><kbd>Ctrl</kbd>+<kbd>S</kbd></kbd>" data-toggle="tooltip">LilyBin</a></li> -->
 							<li><a href="#" class="noop" id="save_to_dropbox">Dropbox</a></li>
 						</ul>
 					</li>
@@ -95,4 +96,3 @@
 		<script src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="eek7m8l7nnlv35a"></script>
 	</body>
 </html>
-
