--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -41,15 +41,16 @@
 					<li><a href="#" class="noop" id="undo_button" title="<kbd><kbd>Ctrl</kbd>+<kbd>Z</kbd></kbd>" data-toggle="tooltip">Undo</a></li>
 					<li><a href="#" class="noop" id="redo_button" title="<kbd><kbd>Ctrl</kbd>+<kbd>Y</kbd></kbd>" data-toggle="tooltip">Redo</a></li>
 					<li><a href="#" id="reset_button">Reset</a></li>
+					<!--
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">File <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="#" class="noop" id="open_from_dropbox">Open from Dropbox</a></li>
-							<!-- Disable saving to LilyBin for now. -->
-							<!-- <li><a href="#" class="noop" id="save_button" title="<kbd><kbd>Ctrl</kbd>+<kbd>S</kbd></kbd>" data-toggle="tooltip">LilyBin</a></li> -->
+							<li><a href="#" class="noop" id="save_button" title="<kbd><kbd>Ctrl</kbd>+<kbd>S</kbd></kbd>" data-toggle="tooltip">LilyBin</a></li>
 							<li><a href="#" class="noop" id="save_to_dropbox">Save to Dropbox</a></li>
 						</ul>
 					</li>
+					-->
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
@@ -95,6 +96,6 @@
 				</div>
 			</div>
 		</div>
-		<script src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="eek7m8l7nnlv35a"></script>
+		<!-- <script src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="eek7m8l7nnlv35a"></script> -->
 	</body>
 </html>
