--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -54,6 +54,7 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
+							<li><a href="http://clairnote.org/software/">Documentation</a></li>
 							<li><a href="http://clairnote.org">Clairnote.org</a></li>
 							<li><a href="http://lilybin.com">LilyBin.com</a></li>
 							<li><a href="https://github.com/PaulMorris/LilyBin/tree/clairnote">Source Code</a></li>
