Cause \include to be expanded for hymn singer libs

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -21,11 +21,11 @@
 						<img width="30" height="30" src="/images/ly.svg">
 					</span>
 					<span class="navbar-brand">
-						<a href="/">LilyBin + Clairnote</a>
+						<a href="/">LilyBin + HymnSinger</a>
 					</span>
 				</div>
 				<ul class="nav navbar-nav">
-					<li class="visible-xs"><a href="/">LilyBin + Clairnote</a></li>
+					<li class="visible-xs"><a href="/">LilyBin + HymnSinger</a></li>
 					<li><a href="#" class="noop" id="preview_button" title="<kbd><kbd>Ctrl</kbd>+<kbd>Enter</kbd></kbd>" data-toggle="tooltip">Preview</a></li>
 					<li class="dropdown">
 						<a href="#" id="version_btn" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Stable <span class="caret"></span></a>
