--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -6,19 +6,19 @@
 		<meta property="og:title" content="LilyPond Score">
 		<meta property="og:description" content="LilyPond Score made using LilyBin.">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.4.0/codemirror.min.css">
-		<link rel="stylesheet" href="/css/main.css">
-		<link rel="apple-touch-icon" sizes="180x180" href="/images/ly-ios-precomposed.png">
-		<script data-main="/js/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.4.0/codemirror.min.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="apple-touch-icon" sizes="180x180" href="images/ly-ios-precomposed.png">
+		<script data-main="js/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
 	</head>
 	<body>
 		<nav id="header" class="navbar navbar-lilybin navbar-unresponsive navbar-static-top">
 			<div class="container-fluid">
 				<div class="navbar-header hidden-xs">
 					<span class="navbar-brand navbar-brand-img">
-						<img width="30" height="30" src="/images/ly.svg">
+						<img width="30" height="30" src="images/ly.svg">
 					</span>
 					<span class="navbar-brand">
 						<a href="/">LilyBin + HymnSinger</a>
@@ -41,21 +41,11 @@
 					<li><a href="#" class="noop" id="undo_button" title="<kbd><kbd>Ctrl</kbd>+<kbd>Z</kbd></kbd>" data-toggle="tooltip">Undo</a></li>
 					<li><a href="#" class="noop" id="redo_button" title="<kbd><kbd>Ctrl</kbd>+<kbd>Y</kbd></kbd>" data-toggle="tooltip">Redo</a></li>
 					<li><a href="#" id="reset_button">Reset</a></li>
-					<!--
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">File <span class="caret"></span></a>
-						<ul class="dropdown-menu" role="menu">
-							<li><a href="#" class="noop" id="open_from_dropbox">Open from Dropbox</a></li>
-							<li><a href="#" class="noop" id="save_button" title="<kbd><kbd>Ctrl</kbd>+<kbd>S</kbd></kbd>" data-toggle="tooltip">LilyBin</a></li>
-							<li><a href="#" class="noop" id="save_to_dropbox">Save to Dropbox</a></li>
-						</ul>
-					</li>
-					-->
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
-							<li><a href="http://clairnote.org/software/">Documentation</a></li>
-							<li><a href="http://clairnote.org">Clairnote.org</a></li>
+							<li><a href="https://clairnote.org/software/">Documentation</a></li>
+							<li><a href="https://clairnote.org">Clairnote.org</a></li>
 							<li><a href="http://lilybin.com">LilyBin.com</a></li>
 							<li><a href="https://github.com/PaulMorris/LilyBin/tree/clairnote">Source Code</a></li>
 						</ul>
@@ -68,7 +58,7 @@
 				<textarea id="code"></textarea>
 			</div>
 			<div class="col-sm-7" id="preview_container">
-				<iframe src="/pdfjs/web/viewer.html"></iframe>
+				<iframe src="pdfjs/web/viewer.html"></iframe>
 				<div class="preview_error">
 					<div class="container-fluid bg-danger">
 						<h3 class="text-danger">Error</h3>
@@ -97,6 +87,6 @@
 				</div>
 			</div>
 		</div>
-		<!-- <script src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="eek7m8l7nnlv35a"></script> -->
 	</body>
 </html>
+
